fix(): Drawer on mobile

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -113,6 +113,10 @@ html, *{
   background: $primary-gradient
 }
 
+.bg-primary-light {
+  background: $primary-light
+}
+
 .text-black-1 {
   color: $text-black-1
 }
