--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,6 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #5D5FEF;
+$primary-light: #6567F0;
 $secondary : #26A69A;
 $accent    : #9C27B0;
 $primary-gradient: linear-gradient(270deg, #9800E8 0%, #8F70E8 100%);
